Chunker changes, database & log changes